'This diagram can be visualized at: https://www.planttext.com/

@startuml back-ms-users-location
skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam componentStyle uml2
skinparam linetype curved


' Paquete para Entidades de Dominio
package "entities" {
    class "CityInfo" {
      - cityId: string <<required>>
      - name: string <<required>>
      - regionId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "CountryInfo" {
      - countryId: string <<required>>
      - name: string <<required>>
      - code: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        enum "LocationType" {
      HOME
      WORK
      BILLING
      SHIPPING
      OTHER
    }
    
        class "NeighborhoodInfo" {
      - neighborhoodId: string <<required>>
      - name: string <<required>>
      - cityId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "RegionInfo" {
      - regionId: string <<required>>
      - name: string <<required>>
      - code: string <<required>>
      - countryId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
    }

' Paquete para DTOs (Data Transfer Objects)
package "dtos" {
    class "CityResponse" {
      - cityId: string <<required>>
      - name: string <<required>>
      - regionId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "CountryResponse" {
      - countryId: string <<required>>
      - name: string <<required>>
      - code: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "CreateLocationRequestContent" {
      - userId: string <<required>>
      - countryId: string <<required>>
      - regionId: string <<required>>
      - cityId: string <<required>>
      - neighborhoodId: string
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
    }
    
        class "CreateLocationResponseContent" {
      - locationId: string <<required>>
      - userId: string <<required>>
      - countryId: string <<required>>
      - regionId: string <<required>>
      - cityId: string <<required>>
      - neighborhoodId: string
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
      - createdAt: string <<required>>
      - status: string <<required>>
    }
    
        class "DeleteLocationResponseContent" {
      - deleted: boolean <<required>>
      - message: string <<required>>
    }
    
        class "GetCitiesByRegionResponseContent" {
      - cities: array <<required>>
    }
    
        class "GetCountriesResponseContent" {
      - countries: array <<required>>
    }
    
        class "GetLocationResponseContent" {
      - locationId: string <<required>>
      - userId: string <<required>>
      - country: CountryInfo <<required>>
      - region: RegionInfo <<required>>
      - city: CityInfo <<required>>
      - neighborhood: NeighborhoodInfo
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
      - status: string <<required>>
    }
    
        class "GetNeighborhoodsByCityResponseContent" {
      - neighborhoods: array <<required>>
    }
    
        class "GetRegionsByCountryResponseContent" {
      - regions: array <<required>>
    }
    
        class "ListLocationsResponseContent" {
      - locations: array <<required>>
      - page: number <<required>>
      - size: number <<required>>
      - total: number <<required>>
      - totalPages: number <<required>>
    }
    
        class "LocationResponse" {
      - locationId: string <<required>>
      - userId: string <<required>>
      - country: CountryInfo <<required>>
      - region: RegionInfo <<required>>
      - city: CityInfo <<required>>
      - neighborhood: NeighborhoodInfo
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
      - status: string <<required>>
    }
    
        class "NeighborhoodResponse" {
      - neighborhoodId: string <<required>>
      - name: string <<required>>
      - cityId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "RegionResponse" {
      - regionId: string <<required>>
      - name: string <<required>>
      - code: string <<required>>
      - countryId: string <<required>>
      - status: string <<required>>
      - createdAt: string <<required>>
      - updatedAt: string <<required>>
    }
    
        class "UpdateLocationRequestContent" {
      - countryId: string
      - regionId: string
      - cityId: string
      - neighborhoodId: string
      - address: string
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType
    }
    
        class "UpdateLocationResponseContent" {
      - locationId: string <<required>>
      - userId: string <<required>>
      - country: CountryInfo <<required>>
      - region: RegionInfo <<required>>
      - city: CityInfo <<required>>
      - neighborhood: NeighborhoodInfo
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
      - updatedAt: string <<required>>
      - status: string <<required>>
    }
    
        class "CreateLocationRequest" {
      - userId: string <<required>>
      - countryId: string <<required>>
      - regionId: string <<required>>
      - cityId: string <<required>>
      - neighborhoodId: string
      - address: string <<required>>
      - postalCode: string
      - latitude: number
      - longitude: number
      - locationType: LocationType <<required>>
    }
    
        class "UpdateLocationRequest" {
      - locationId: string <<required>>
      - body: object <<required>>
    }
    
    }

' Paquete para DTOs de Errores/Excepciones
package "Exceptions" {
    class "ConflictErrorResponseContent" {
      - message: string <<required>>
    }
    
        class "NotFoundErrorResponseContent" {
      - message: string <<required>>
    }
    
        class "ValidationErrorResponseContent" {
      - message: string <<required>>
      - field: string <<required>>
    }
    
    }


' Relationships (now crossing package boundaries)
dtos.CreateLocationRequest --> LocationType
dtos.CreateLocationRequestContent --> LocationType
dtos.CreateLocationResponseContent --> LocationType
dtos.GetLocationResponseContent --> CityInfo
dtos.GetLocationResponseContent --> CountryInfo
dtos.GetLocationResponseContent --> LocationType
dtos.GetLocationResponseContent --> NeighborhoodInfo
dtos.GetLocationResponseContent --> RegionInfo
dtos.LocationResponse --> CityInfo
dtos.LocationResponse --> CountryInfo
dtos.LocationResponse --> LocationType
dtos.LocationResponse --> NeighborhoodInfo
dtos.LocationResponse --> RegionInfo
dtos.UpdateLocationRequestContent --> LocationType
dtos.UpdateLocationResponseContent --> CityInfo
dtos.UpdateLocationResponseContent --> CountryInfo
dtos.UpdateLocationResponseContent --> LocationType
dtos.UpdateLocationResponseContent --> NeighborhoodInfo
dtos.UpdateLocationResponseContent --> RegionInfo

@enduml
